--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"name": "zandkhqastro-main",
 	"version": "1.0.0",
 	"private": true,
+	"engines": {
+		"node": ">=18"
+	},
 	"scripts": {
 		"dev": "astro dev --host",
 		"dev-full": "pnpm run i18n:generate && astro dev --host",
